[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Player/BloodParticle/BloodParticle.gd" type="Script" id=1]
[ext_resource path="res://objects/Player/BloodParticle/smoke.png" type="Texture" id=2]
[ext_resource path="res://objects/Player/BloodParticle/slurp.ogg" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.5704 ), 0.0, 0.0, 0, 0, Vector2( 0.497846, 0.2888 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[node name="BloodParticle" type="Spatial"]
script = ExtResource( 1 )

[node name="BloodParticles" type="CPUParticles" parent="."]
transform = Transform( -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0, 1, 0, 0, 0 )
amount = 30
lifetime = 0.25
speed_scale = 0.75
local_coords = false
mesh = SubResource( 2 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.5
angular_velocity = 90.0
angular_velocity_random = 0.85
scale_amount = 0.5
scale_amount_curve = SubResource( 3 )

[node name="Path" type="Path" parent="."]
editor/display_folded = true
curve = SubResource( 4 )

[node name="PathFollow" type="PathFollow" parent="Path"]

[node name="Tween" type="Tween" parent="."]

[node name="Slurp" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 1.0
unit_size = 2.0
pitch_scale = 0.85

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="finished" from="Slurp" to="." method="_on_Slurp_finished"]
